# monitor-merlin

./: .buildinfo  .gitignore  .gitmodules  .mailmap  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  COPYING  ChangeLog  Gemfile  HOWTO  Makefile  Makefile.am  MerlinPDO.inc.php  NEWS  README  README.md  SPECS  TECHNICAL  auth.c  auth.h  autogen.sh  binlog.c  binlog.h  blktest.c  bltest.c  cfgfile.c  cfgfile.h  changelog.html  check_latency.c  clustering.html  codec.c  codec.h  colors.h  compat.h  conf.py  config.c  config.h  configuration.html  configure.ac  (+113 more)
.github/: make-release.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  obs.yml
_sources/: clustering.rst.txt  configuration.rst.txt  container-poller-readme.md.txt  encryption.rst.txt  index.rst.txt  install.rst.txt
apps/: .gitignore  mon.py  mon.py.in  reportdata-import.cron  reportdata-push.cron
apps/cluster_tools/: cluster_tools.py.in
apps/libexec/: .gitignore  api.ls.sh  ascii.py  check.py  check.py.in  conf.ramdisk.sh  containerhealth.py.in  db.py  db.py.in  ecmd.py  id.py  log.color.sh  log.push.sh  log.py  log.py.in  merlinkey.py.in  node.py  node.tree.php  oconf.fetch.sh  oconf.fetch.sh.in  oconf.push.sh  oconf.py  oconf.py.in  qh.py  query.ls.sh  query.ls.sh.in  query.lsq.sh  query.lsq.sh.in  reportdata.py  reportdata.py.in  restart.sh  restart.sh.in  run-ci-test.sh  slim-poller.py.in  sshkey.fetch.sh  sshkey.fetch.sh.in  sshkey.push.sh  sshkey.push.sh.in  start.sh  status.py  (+29 more)
apps/man/: mon.1  mon_1.md
apps/plugins/: check_conf_sync.sh  check_report_data.pl
compat/: asprintf.c  memrchr.c
daemon/: daemon.c  daemon.h  daemonize.c  db_updater.c  db_updater.h  db_wrap.c  db_wrap.h  db_wrap_dbi.c  merlind.c  net.c  net.h  sql.c  sql.h  state.c  state.h  status.c  status.h  string_utils.c
data/: .gitignore  kad.conf.in  merlin.cfg.in  merlin.conf.in  merlin.in  merlind.in
docker/centos6/: Dockerfile
docs/: .gitignore  Makefile  clustering.rst  conf.py  container-poller.md  encryption.rst  install.rst  merlin.conf.sample
docs/_templates/: layout.html
doctrees/: environment.pickle  index.doctree
features/: active_checks.feature  binlog.feature  check_result_output.feature  check_results_propagation.feature  cluster_update.feature  config_split_poller.feature  config_sync_passive_poller.feature  config_sync_peer.feature  config_sync_poller.feature  connection.feature  csync_unsynced_masters.feature  event_handler_execution.feature  execute_host_checks.feature  hostgroup_split.feature  ipc_nodeinfo_version.feature  livestatus.feature  module_connect.feature  mon_log_purge.feature  notification_contact_propagation.feature  notification_execution.feature  notification_host_execution.feature  notification_persistence.feature  notification_propagation.feature  notification_service_execution.feature  notifications.feature  passive_check_results.feature  peer_connect.feature  peer_nodeinfo_version.feature  report_data_host_active.feature  report_data_service_active.feature  retention_data_oconf_hash.feature  runcmd.feature  scheduled_downtime.feature  simple_forward.feature  startup.feature
features/data/: README  module.my-peer.binlog.save
features/step_definitions/: cukemerlin.wire  database.rb  delay.rb  livestatus.rb  merlin.rb  merlin_node_config.rb  mon_log_purge.rb  naemon.rb  naemon_object_config.rb  naemon_system_config.rb  network_setup.rb  repeat.rb  service_startup.rb  service_startup.rb.in  systemd_merlind.rb
features/support/: database_config.rb  env.rb  merlin_node_config.rb  merlin_packet_defaults.rb  naemon_object_config.rb  naemon_system_config.rb
html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
html/_sources/: index.rst.txt
html/_static/: documentation_options.js
man/: mon_1.md
mdo/: db_updater.c  db_updater.h  db_wrap_dbi.c  db_wrap_dbi.h  mdo-configuration.c  mdo-configuration.h  module.c  sql.c
module/: hooks.c  hooks.h  misc.c  misc.h  module.c  module.h  net.c  net.h  oconfsplit.c  oconfsplit.h  queries.c  queries.h  runcmd.c  runcmd.h  script-helpers.c  script-helpers.h  sha1.h  testif_qh.c  testif_qh.h
nagios/: cgiutils.h  common.h  compat.h  config.h  locations.h  objects.h
obs/rpm/: merlin.spec
op5build/: MON-13561_disable_py_compile.patch  build.sh  ci_config.yml  merlin.spec  monitor-merlin.list.in  nacoma_hook.py  postinstall  preinstall  preremove
op5build/solaris/: build  depend  manifest.xml  package.sh  pkginfo  postinstall  postremove  preremove
shared/: binlog.c  binlog.h  cfgfile.c  codec.c  codec.h  configuration.c  configuration.h  db_wrap.c  db_wrap_dbi.c  encryption.c  encryption.h  io.c  ipc.c  ipc.h  logging.c  logging.h  mrln_logging.h  node.c  node.h  pgroup.c  pgroup.h  shared.c  shared.h  sql.c
sql/: update-db-1to2.sql  update-db-2to3.sql
sql/mysql/: merlin.sql  notification-indexes.sql  perfdata-indexes.sql  report-data-indexes.sql
sql/oracle/: drop_indexes.sql  merlin-always.sql  merlin-install.sql  merlin-v5.4_to_v5.5.sql  merlin-v5.5_to_v5.6.sql  merlin-v5.6_to_v5.7.sql  merlin_grant.sql  merlin_seq.sql  v5.5_to_v5.6.sql
sudo/: merlin.in
test_protocol/: dotest.py  merlinnet.py  merlinpkt.py
tests/: bltest.c  codectest.c  generate-nebev2kvvec.py  module.conf  singlenode.conf  sltest.c  test-codec.c  test-csync.c  test-dbwrap.c  test-hooks.c  test-importlog.c  test-lparse.c  test-module.c  test-showlog.c  test-stringutils.c  twopeers.conf
tests/cukemerlin/: cukemerlin.c  cukesocket.c  cukesocket.h  jsonsocket.c  jsonsocket.h  jsonx.c  jsonx.h
tests/merlincat/: client_gsource.c  conn_info.c  conn_info.h  console.c  event_packer.c  event_packer.h  generate-nebev2kvvec.py  merlincat.c  merlincat_codec.c  merlincat_codec.h  merlincat_encryption.c  merlincat_encryption.h  merlinreader.h  server_gsource.c  server_gsource.h
tests/pyunit/: test.py  (+2 more)
tools/: auth.c  auth.h  import.c  keygen.c  logutils.c  logutils.h  lparse.c  lparse.h  ocimp.c  ocimp.h  oconf.c  rename.c  showlog.c  slist.c  test_utils.c  test_utils.h
xdoc/: mainpage.dox  supported.dox
(+116 files in other folders)
